# simple-api

./: Dockerfile  pyproject.toml
.github/workflows/: build.yml
app/: main.py
