[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["eunjuukim <eunju.kim@qraftec.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

